--- a/escom-bpm-web/src/main/webapp/view/admin/objects-right.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/admin/objects-right.xhtml
@@ -139,6 +139,10 @@
                         </p:commandButton>
                     </f:facet>
                 </p:dataTable>
+                <h:panelGrid id="pnInfo" columns="2">
+                        <p:graphicImage value="/resources/icon/importance-20.png" /> 
+                        <h:outputLabel value="#{msg.InfoChangeRight}" />
+                </h:panelGrid>
             </p:tab>
         </p:tabView>
     
