--- a/escom-bpm-web/src/main/webapp/view/admin/numPattern/num-pattern-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/admin/numPattern/num-pattern-card.xhtml
@@ -7,9 +7,9 @@
 
     <ui:define name="page_body"> 
         <p:tab id="cardTab" title="#{bundle.Explorer}">     
-            <p:panelGrid columns="1" styleClass="ui-panelgrid-blank ui-grid-col-12" columnClasses="ui-grid-col-12" >                
+            <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces"> 
 
-                <p:outputLabel value="#{bundle.NamePattern}" indicateRequired="true"/>
+                <p:outputLabel value="#{bundle.NamePattern}:" indicateRequired="true"/>
                 <p:inputText id="nameItem" value="#{_bean.editedItem.name}" 
                              onkeypress="checkEsc();"
                              onchange="return itemChange = 1;"
@@ -19,19 +19,19 @@
                              requiredMessage="#{bundle.Field} [#{bundle.Name}] #{bundle.MustBeFilled}"/>
                 <p:watermark for="nameItem" value="#{bundle.InputNameNumerator}" />             
 
-                <p:outputLabel value="#{bundle.PatternAutoGenerate}" indicateRequired="true"/>
-                <p:inputText id="patternAuto" value="#{_bean.editedItem.pattern}"
-                             title="#{bundle.PatternAutoGenerate}"
+                <p:outputLabel value="#{bundle.PatternAutoGenerate}:" indicateRequired="true"/>
+                <p:inputText id="patternAuto" value="#{_bean.editedItem.pattern}" title="#{msg.PatternInfo}"
                              onkeypress="checkEsc();"
                              onchange="return itemChange = 1;"
                              disabled="#{!_bean.isHaveRightEdit()}"
+                             placeholder="#{msg.PatternInfo}"
                              styleClass="ui-grid-col-12"
                              required="#{param['isRequired'] == 'true'}"
                              requiredMessage="#{bundle.Field} [#{bundle.PatternAutoGenerate}] #{bundle.MustBeFilled}">
                     <p:keyFilter regEx="/[CODEMPGRTYNy//-]/i" />
-                </p:inputText>    
-                <p:watermark for="patternAuto" value="#{bundle.InputPattern}"/> 
-                <p:outputLabel value="#{bundle.LeadingZeros}" indicateRequired="true"/>
+                </p:inputText>                
+                
+                <p:outputLabel value="#{bundle.LeadingZeros}:" indicateRequired="true"/>
                 <p:spinner id="leadingZeros" value="#{_bean.editedItem.leadingZeros}" 
                            onkeypress="checkEsc();"
                            onchange="return itemChange = 1;"
