--- a/escom-bpm-web/src/main/webapp/view/processes/templ/proctempl-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/templ/proctempl-explorer.xhtml
@@ -1,8 +1,6 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="/view/templ/templ-explorer.xhtml"
-                xmlns:p="http://primefaces.org/ui"
-                xmlns:h="http://xmlns.jcp.org/jsf/html">
+                template="/view/templ/templ-explorer.xhtml">
 
     <!-- стандарный обозреватель/селектор -->
     
